zero-schema-macros/tests/ui/fail/65_optional_u16_c_str.rs
use zero_schema_macros::zero;

#[zero]
struct Invalid {
    value: Option<&'static widestring::U16CStr>,
}

fn main() {}
